--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74d26a">  <td>19/08/27 00:27:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MINT1234.mint1234(java.util.HashMap)[pri:0, instance:com.crm.qa.mintTestCases.MINT1234@26a7b76d]">mint1234</td> 
-  <td>main@399534175</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/08/27 00:27:57</td>   <td>49497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MINT1234.tearDown()[pri:0, instance:com.crm.qa.mintTestCases.MINT1234@26a7b76d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@399534175</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:11:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:12:02</td>   <td>42566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:12:25</td>   <td>64922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:12:44</td>   <td>83820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:12:00</td>   <td>40246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:12:24</td>   <td>64087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:12:43</td>   <td>82922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:13:05</td>   <td>105555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:11:59</td>   <td>39573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.titleTest()[pri:1, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">titleTest</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:13:02</td>   <td>102087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.userLoginTest()[pri:4, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">userLoginTest</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:12:42</td>   <td>82452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateCopyrightTextTest()[pri:3, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">validateCopyrightTextTest</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/07 12:12:24</td>   <td>63815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateLogoTest()[pri:2, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">validateLogoTest</td> 
+  <td>main@770189387</td>   <td></td> </tr>
 </table>
