before deleting BaseTest constructor

--- a/test-output/old/PageFactoryDemo/methods-alphabetical.html
+++ b/test-output/old/PageFactoryDemo/methods-alphabetical.html
@@ -1,26 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>PageFactoryDemo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bcfcb">  <td>19/08/15 15:27:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MINT1234.mint1234(java.util.HashMap)[pri:0, instance:com.crm.qa.mintTestCases.MINT1234@5bcea91b]">mint1234</td> 
-  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/08/15 15:26:44</td>   <td>-61425</td> <td>&nbsp;</td><td title="&gt;&gt;CoursesPageTest.setup()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@5bfbf16f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/08/15 15:27:15</td>   <td>-31355</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@25af5db5]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>19/08/15 15:28:48</td>   <td>61795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminDashboardPageTest.setup()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@12cdcf4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>19/08/15 15:28:45</td>   <td>59073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MINT1234.tearDown()[pri:0, instance:com.crm.qa.mintTestCases.MINT1234@5bcea91b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>19/08/15 15:29:09</td>   <td>82718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminDashboardPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@12cdcf4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/08/15 15:29:09</td>   <td>83579</td> <td>&nbsp;</td><td title="&lt;&lt;CoursesPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@5bfbf16f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/08/15 15:29:10</td>   <td>83775</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@25af5db5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/08/15 15:28:47</td>   <td>61571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.titleTest()[pri:1, instance:com.crm.qa.testCases.LoginPageTest@25af5db5]">titleTest</td> 
-  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>19/08/15 15:29:07</td>   <td>81012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminDashboardPageTest.validateAdminPageHeadingTest()[pri:1, instance:com.crm.qa.testCases.AdminDashboardPageTest@12cdcf4]">validateAdminPageHeadingTest</td> 
-  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/08/15 15:27:38</td>   <td>-8256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CoursesPageTest.validateCoursesPageHeadingTest()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@5bfbf16f]">validateCoursesPageHeadingTest</td> 
-  <td>main@1131645570</td>   <td></td> </tr>
+<tr bgcolor="86e9a5">  <td>19/09/15 21:12:39</td>   <td>0</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="86e9a5">  <td>19/09/15 21:06:08</td>   <td>-390241</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="86e9a5">  <td>19/09/15 21:06:27</td>   <td>-371923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="c562f7">  <td>19/09/15 21:11:18</td>   <td>-80619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminDashboardPageTest.setup()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@41e36e46]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="86e9a5">  <td>19/09/15 21:11:14</td>   <td>-84201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="c562f7">  <td>19/09/15 21:12:34</td>   <td>-4809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminDashboardPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@41e36e46]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="86e9a5">  <td>19/09/15 21:07:25</td>   <td>-313844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.titleTest()[pri:1, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">titleTest</td> 
+  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="c562f7">  <td>19/09/15 21:12:13</td>   <td>-25863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminDashboardPageTest.validateAdminPageHeadingTest()[pri:1, instance:com.crm.qa.testCases.AdminDashboardPageTest@41e36e46]">validateAdminPageHeadingTest</td> 
+  <td>main@1202683709</td>   <td></td> </tr>
 </table>
