--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">106,564</td><td></td><td></td></tr>
+<tr><th colspan="7">PageFactoryDemo</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">369,590</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.crm.qa.testCases.LoginPageTest</td><td><a href="#m0">titleTest</a></td><td rowspan="1">1567838519952</td><td rowspan="1">669</td></tr><tr class="passedeven"><td><a href="#m1">userLoginTest</a></td><td rowspan="1">1567838582466</td><td rowspan="1">3467</td></tr><tr class="passedeven"><td><a href="#m2">validateCopyrightTextTest</a></td><td rowspan="1">1567838562831</td><td rowspan="1">468</td></tr><tr class="passedeven"><td><a href="#m3">validateLogoTest</a></td><td rowspan="1">1567838544194</td><td rowspan="1">270</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">PageFactoryDemo</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.crm.qa.testCases.AdminDashboardPageTest</td><td><a href="#m0">validateAdminPageHeadingTest</a></td><td rowspan="1">1568562133303</td><td rowspan="1">18613</td></tr><tr class="passedodd"><td rowspan="1">com.crm.qa.testCases.LoginPageTest</td><td><a href="#m1">titleTest</a></td><td rowspan="1">1568561845322</td><td rowspan="1">226233</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.crm.qa.testCases.LoginPageTest#titleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.crm.qa.testCases.LoginPageTest#userLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.crm.qa.testCases.LoginPageTest#validateCopyrightTextTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.crm.qa.testCases.LoginPageTest#validateLogoTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.crm.qa.testCases.AdminDashboardPageTest#validateAdminPageHeadingTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.crm.qa.testCases.LoginPageTest#titleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
