--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-PageFactoryDemo">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-PageFactoryDemo" title="com.crm.qa.testCases.LoginPageTest" hash-for-method="titleTest">titleTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-PageFactoryDemo" title="com.crm.qa.testCases.AdminDashboardPageTest" hash-for-method="validateAdminPageHeadingTest">validateAdminPageHeadingTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-PageFactoryDemo" title="com.crm.qa.testCases.CoursesPageTest" hash-for-method="validateCoursesPageHeadingTest">validateCoursesPageHeadingTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-PageFactoryDemo -->
@@ -125,29 +120,14 @@
           <div class="suite-PageFactoryDemo-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.crm.qa.testCases.AdminDashboardPageTest</span>
+              <span class="class-name">com.crm.qa.testCases.CoursesPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validateAdminPageHeadingTest">
-                  </a> <!-- validateAdminPageHeadingTest -->
-                  <span class="method-name">validateAdminPageHeadingTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-PageFactoryDemo-class-passed -->
-          <div class="suite-PageFactoryDemo-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.crm.qa.testCases.LoginPageTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="titleTest">
-                  </a> <!-- titleTest -->
-                  <span class="method-name">titleTest</span>
+                  <a name="validateCoursesPageHeadingTest">
+                  </a> <!-- validateCoursesPageHeadingTest -->
+                  <span class="method-name">validateCoursesPageHeadingTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -165,9 +145,10 @@
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.crm.qa.listeners.ListenerClass&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;1&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.crm.qa.testCases.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;com.crm.qa.testCases.CoursesPageTest&quot;/&gt;
       &lt;class name=&quot;com.crm.qa.testCases.AdminDashboardPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
@@ -182,7 +163,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (2 classes)</span>
+                <span class="test-name">Test (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -208,20 +189,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'titleTest')
-data.setCell(0, 2, 'com.crm.qa.testCases.LoginPageTest')
-data.setCell(0, 3, 226233);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validateAdminPageHeadingTest')
-data.setCell(1, 2, 'com.crm.qa.testCases.AdminDashboardPageTest')
-data.setCell(1, 3, 18613);
+data.setCell(0, 1, 'validateCoursesPageHeadingTest')
+data.setCell(0, 2, 'com.crm.qa.testCases.CoursesPageTest')
+data.setCell(0, 3, 2860);
 window.suiteTableData['PageFactoryDemo']= { tableData: data, tableDiv: 'times-div-PageFactoryDemo'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 minutes</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-PageFactoryDemo">
               </div> <!-- times-div-PageFactoryDemo -->
             </div> <!-- times-div -->
@@ -252,39 +229,27 @@ return data;
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">18335 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">titleTest</span>
-                <span class="method-start">76414 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">306057 ms</span>
-              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.crm.qa.testCases.AdminDashboardPageTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
+              <div class="chronological-class-name">com.crm.qa.testCases.CoursesPageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
                 <span class="method-name">setup</span>
-                <span class="method-start">309638 ms</span>
-              </div> <!-- configuration-method before -->
+                <span class="method-start">230 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">validateAdminPageHeadingTest</span>
-                <span class="method-start">364395 ms</span>
+                <span class="method-name">validateCoursesPageHeadingTest</span>
+                <span class="method-start">17177 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
+              <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">385449 ms</span>
-              </div> <!-- configuration-method after -->
+                <span class="method-start">20047 ms</span>
+              </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.crm.qa.testCases.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">390258 ms</span>
+                <span class="method-start">20978 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
