--- a/test-output/old/PageFactoryDemo/methods-alphabetical.html
+++ b/test-output/old/PageFactoryDemo/methods-alphabetical.html
@@ -1,20 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>PageFactoryDemo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="86e9a5">  <td>19/09/15 21:12:39</td>   <td>0</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="86e9a5">  <td>19/09/15 21:06:08</td>   <td>-390241</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="86e9a5">  <td>19/09/15 21:06:27</td>   <td>-371923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="c562f7">  <td>19/09/15 21:11:18</td>   <td>-80619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminDashboardPageTest.setup()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@41e36e46]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="86e9a5">  <td>19/09/15 21:11:14</td>   <td>-84201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="c562f7">  <td>19/09/15 21:12:34</td>   <td>-4809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminDashboardPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@41e36e46]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="86e9a5">  <td>19/09/15 21:07:25</td>   <td>-313844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.titleTest()[pri:1, instance:com.crm.qa.testCases.LoginPageTest@76508ed1]">titleTest</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="c562f7">  <td>19/09/15 21:12:13</td>   <td>-25863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminDashboardPageTest.validateAdminPageHeadingTest()[pri:1, instance:com.crm.qa.testCases.AdminDashboardPageTest@41e36e46]">validateAdminPageHeadingTest</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>19/09/16 01:17:15</td>   <td>0</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@53b32d7]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>19/09/16 01:16:54</td>   <td>-20969</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@53b32d7]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/16 01:16:54</td>   <td>-20749</td> <td>&nbsp;</td><td title="&gt;&gt;CoursesPageTest.setup()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@5442a311]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/16 01:17:14</td>   <td>-932</td> <td>&nbsp;</td><td title="&lt;&lt;CoursesPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@5442a311]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/16 01:17:11</td>   <td>-3805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CoursesPageTest.validateCoursesPageHeadingTest()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@5442a311]">validateCoursesPageHeadingTest</td> 
+  <td>main@540159270</td>   <td></td> </tr>
 </table>
