--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:11:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:11:59</td>   <td>39573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.titleTest()[pri:1, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">titleTest</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:12:00</td>   <td>40246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:12:02</td>   <td>42566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:12:24</td>   <td>63815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateLogoTest()[pri:2, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">validateLogoTest</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:12:24</td>   <td>64087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:12:25</td>   <td>64922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:12:42</td>   <td>82452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateCopyrightTextTest()[pri:3, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">validateCopyrightTextTest</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:12:43</td>   <td>82922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:12:44</td>   <td>83820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:13:02</td>   <td>102087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.userLoginTest()[pri:4, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">userLoginTest</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/07 12:13:05</td>   <td>105555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@7a9273a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:00</td>   <td>0</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:01</td>   <td>241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:11</td>   <td>10344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.titleTest()[pri:1, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">titleTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:11</td>   <td>10415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:12</td>   <td>11415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:21</td>   <td>20466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateLogoTest()[pri:2, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">validateLogoTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:21</td>   <td>20552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:22</td>   <td>21533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:31</td>   <td>30478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateCopyrightTextTest()[pri:3, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">validateCopyrightTextTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:31</td>   <td>30531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:32</td>   <td>31386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:41</td>   <td>40380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.userLoginTest()[pri:4, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">userLoginTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:41</td>   <td>40926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="6e8abd">  <td>19/09/16 06:54:42</td>   <td>42044</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@77cd7a0]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
 </table>
