--- a/test-output/old/PageFactoryDemo/methods.html
+++ b/test-output/old/PageFactoryDemo/methods.html
@@ -1,14 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>PageFactoryDemo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="81b0a2">  <td>19/09/16 01:16:54</td>   <td>0</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@53b32d7]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/16 01:16:54</td>   <td>220</td> <td>&nbsp;</td><td title="&gt;&gt;CoursesPageTest.setup()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@5442a311]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/16 01:17:11</td>   <td>17164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CoursesPageTest.validateCoursesPageHeadingTest()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@5442a311]">validateCoursesPageHeadingTest</td> 
-  <td>main@540159270</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/09/16 01:17:14</td>   <td>20037</td> <td>&nbsp;</td><td title="&lt;&lt;CoursesPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@5442a311]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>19/09/16 01:17:15</td>   <td>20969</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@53b32d7]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:21</td>   <td>0</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:21</td>   <td>201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:31</td>   <td>10408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.titleTest()[pri:1, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">titleTest</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:31</td>   <td>10473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:32</td>   <td>11540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:42</td>   <td>21247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateLogoTest()[pri:2, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">validateLogoTest</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:42</td>   <td>21353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:44</td>   <td>23033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:53</td>   <td>32693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateCopyrightTextTest()[pri:3, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">validateCopyrightTextTest</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:53</td>   <td>32770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:13:55</td>   <td>33881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:14:04</td>   <td>43594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.userLoginTest()[pri:4, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">userLoginTest</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:14:07</td>   <td>45797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>19/09/16 08:14:08</td>   <td>46887</td> <td>&nbsp;</td><td title="&gt;&gt;CoursesPageTest.setup()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@6e1567f1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>19/09/16 08:14:17</td>   <td>56560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CoursesPageTest.validateCoursesPageHeadingTest()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@6e1567f1]">validateCoursesPageHeadingTest</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>19/09/16 08:14:19</td>   <td>58410</td> <td>&nbsp;</td><td title="&lt;&lt;CoursesPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@6e1567f1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:14:20</td>   <td>59488</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
 </table>
